--- a/src/index.css
+++ b/src/index.css
@@ -124,7 +124,13 @@ table {
 }
 
 /* RESET CSS END */
-
+/* privremeni css */
+body {
+  background-color: #333;
+}
+img {
+  max-width: 400px;
+}
 input {
   display: block;
   margin: 1em;
@@ -185,9 +191,9 @@ button:hover {
   font-size: 1.5em;
   text-decoration: underline;
   color: red;
-  display:block;
+  display: block;
   margin: 1em;
- 
+
   cursor: pointer;
   outline: 0;
   display: inline-block;
@@ -198,14 +204,21 @@ button:hover {
   border: 1px solid transparent;
   padding: 6px 12px;
   font-size: 1rem;
-  border-radius: .25rem;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   color: #0d6efd;
   border-color: #0d6efd;
-
 }
 .detailsText:hover {
   color: #fff;
   background-color: #0d6efd;
   border-color: #0d6efd;
 }
+/* .blob {
+  width: 1000px;
+  height: 1000px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("data:image/svg+xml;utf8, %3Csvg width='100%25' height='100%25' viewBox='0 0 1000 1000' xmlns='http://www.w3.org/2000/svg' %3E %3Cdefs%3E %3Cfilter id='grain' x='-50vw' y='-50vh' width='100vw' height='100vh'%3E %3CfeFlood flood-color='%23ffffff' result='neutral-gray' /%3E %3CfeTurbulence in='neutral-gray' type='fractalNoise' baseFrequency='2.5' numOctaves='100' stitchTiles='stitch' result='noise' /%3E %3CfeColorMatrix in='noise' type='saturate' values='0' result='destaturatedNoise' %3E%3C/feColorMatrix%3E %3CfeComponentTransfer in='desaturatedNoise' result='theNoise'%3E %3CfeFuncA type='table' tableValues='0 0 0.15 0'%3E%3C/feFuncA%3E %3C/feComponentTransfer%3E %3CfeBlend in='SourceGraphic' in2='theNoise' mode='soft-light' result='noisy-image' /%3E %3C/filter%3E %3CclipPath id='shape'%3E %3Cpath fill='currentColor' d='M815.5,653Q806,806,653,898Q500,990,334.5,910.5Q169,831,130.5,665.5Q92,500,174,378Q256,256,378,136.5Q500,17,660.5,98Q821,179,823,339.5Q825,500,815.5,653Z'%3E%3C/path%3E %3C/clipPath%3E %3C/defs%3E %3Cg filter='url(%23grain)' clip-path='url(%23shape)'%3E %3Cpath fill='%23444cf7' d='M815.5,653Q806,806,653,898Q500,990,334.5,910.5Q169,831,130.5,665.5Q92,500,174,378Q256,256,378,136.5Q500,17,660.5,98Q821,179,823,339.5Q825,500,815.5,653Z' /%3E %3C/g%3E %3C/svg%3E");
+} */
