--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,7 @@ table {
 /* RESET CSS END */
 /* privremeni css */
 body {
-  background-color: #333;
+  background-color: rgb(190, 191, 214);
 }
 img {
   max-width: 400px;
