--- a/src/index.css
+++ b/src/index.css
@@ -5,18 +5,9 @@
 *::before,
 *::after {
   box-sizing: border-box;
-}
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-p,
-figure,
-picture {
   margin: 0;
 }
+
 body {
   background-position: center;
   background: url(https://images.unsplash.com/photo-1596877098462-fd1cfc6482c4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
@@ -24,7 +15,7 @@ body {
   background-repeat: no-repeat;
   height: 100vh;
 
-  font-family: sans-serif;
+  font-family: Aliens ate my mum, sans-serif;
   font-size: 1rem;
   color: rgba(255, 255, 255, 0.568);
   background-color: rgba(0, 0, 0, 0.323);
