--- a/src/index.css
+++ b/src/index.css
@@ -1,72 +1,109 @@
 ::root {
   --clr-white: 0 0% 100%;
 }
+@font-face {
+  font-family: "GlyphWorld Desert";
+  src: url("./assets/GlyphWorld-Desert.otf");
+  font-weight: normal;
+  font-style: normal;
+}
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
 
 body {
-  background-position: center;
-  background: url(https://images.unsplash.com/photo-1596877098462-fd1cfc6482c4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
+  background: url(./assets/bg.svg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-repeat: no-repeat;
-  height: 100vh;
-
-  font-family: Aliens ate my mum, sans-serif;
-  font-size: 1rem;
+  font-family: "GlyphWorld Desert", sans-serif;
+  font-size: 1.2rem;
+  letter-spacing: 3px;
   color: rgba(255, 255, 255, 0.568);
   background-color: rgba(0, 0, 0, 0.323);
-  line-height: 1.5;
-  min-height: 100vh;
-  overflow-x: hidden;
-  display: grid;
-  grid-template-rows: min-content 1fr;
+}
+span {
+  white-space: nowrap;
 }
 
-.flex {
-  display: flex;
-  gap: var(--gap, 1rem);
-}
-.logo {
-  margin: 2rem clamp(1.5rem, 5vw, 3.5rem);
-}
-img {
-  max-width: 300px;
-}
-
-input:focus {
-  border: 2px solid rgb(124, 138, 255);
-}
+/* INPUT, BUTTONS, LABEL */
 
 button {
   cursor: pointer;
   outline: 0;
   color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
+  background: transparent;
+  border: 2px solid white;
   display: inline-block;
   font-weight: 400;
   line-height: 1.5;
   text-align: center;
-  border: 1px solid transparent;
   padding: 6px 12px;
   font-size: 16px;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-button:hover {
-  color: #fff;
-  background-color: #0b5ed7;
-  border-color: #0a58ca;
+.detailsText {
+  font-size: 1.5em;
+  text-decoration: underline;
+  display: block;
+  margin: 1em;
+  cursor: pointer;
+  outline: 0;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  border: 1px solid transparent;
+  padding: 6px 12px;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  color: #ffffff;
+  border-color: #ffffff;
 }
-span {
-  white-space: nowrap;
+button:hover,
+.detailsText:hover {
+  color: rgb(0, 0, 0);
+  background-color: #ffffff;
+  border-color: #ffffff;
+}
+.mobile-nav-toggle:hover {
+  background-color: transparent;
+}
+input {
+  display: block;
+  margin: 1em;
+  color: rgb(36, 35, 42);
+  font-size: 16px;
+  line-height: 20px;
+  min-height: 28px;
+  border-radius: 4px;
+  padding: 8px 16px;
+  border: 2px solid transparent;
+  box-shadow: rgb(0 0 0 / 12%) 0px 1px 3px, rgb(0 0 0 / 24%) 0px 1px 2px;
+  background: rgb(251, 251, 251);
+  transition: all 0.1s ease 0s;
+}
+
+input:focus {
+  box-shadow: rgb(0 0 0 / 72%) 0px 1px 3px, rgba(0, 0, 0, 14) 0px 1px 2px;
+}
+/* NAVBAR */
+.logo {
+  width: 70px;
+  margin: 2rem clamp(1.5rem, 5vw, 3.5rem);
 }
 .primary-header {
+  display: flex;
+  gap: var(--gap, 1rem);
   justify-content: space-between;
   align-items: center;
 }
@@ -81,21 +118,25 @@ span {
   background: rgba(0, 0, 0, 0.11);
   border-radius: 30px 0 0 30px;
 }
-
 .mobile-nav-toggle {
   display: none;
 }
-
-@supports (backdrop-filter: blur(1rem)) {
-  .primary-navigation {
-    background: rgb(0, 0, 0) / 0.6;
-    backdrop-filter: blur(1rem);
-  }
-}
-
 .primary-navigation span {
   font-weight: 700;
   margin-right: 0.5em;
+}
+.primary-navigation > * {
+  cursor: pointer;
+  padding: 1rem 2rem;
+  border: 0;
+}
+@supports (backdrop-filter: blur(1rem)) {
+  button,
+  .primary-navigation,
+  .detailsText {
+    background: rgb(0, 0, 0) / 0.6;
+    backdrop-filter: blur(1rem);
+  }
 }
 
 @media (max-width: 35rem) {
@@ -105,7 +146,7 @@ span {
     z-index: 1000;
     inset: 0 0 0 30%;
     list-style: none;
-    padding: min(20rem, 15vh) 2rem;
+    padding: 2rem;
     margin: 0;
     flex-direction: column;
     transform: translateX(100%);
@@ -136,13 +177,13 @@ span {
 
 @media (min-width: 35em) {
   .primary-navigation {
-    --underline-gap: 0.5rem;
+    gap: 0.5rem;
     padding-inline: clamp(3rem, 7vw, 7rem);
   }
 }
 
-@media (min-width: 35em) and (max-width: 45em) {
-  .primary-navigation > span {
+@media (min-width: 35em) and (max-width: 44.999rem) {
+  span {
     display: none;
   }
 }
@@ -165,71 +206,14 @@ span {
     margin-block: 3rem;
   }
 }
-.underline-indicators > * {
-  cursor: pointer;
-  padding: var(--underline-gap, 1rem) 0;
-  border: 0;
-  border-bottom: 0.2rem solid hsl(var(--clr-white) / 0);
-}
 
-.underline-indicators > *:hover,
-.underline-indicators > *:focus {
-  border-color: #fff;
-}
-
-.underline-indicators > .active,
-.underline-indicators > [aria-selected="true"] {
-  color: #fff;
-  border-color: #fff;
-}
 li {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-input {
-  display: block;
-  margin: 1em;
-  color: rgb(36, 35, 42);
-  font-size: 16px;
-  line-height: 20px;
-  min-height: 28px;
-  border-radius: 4px;
-  padding: 8px 16px;
-  border: 2px solid transparent;
-  box-shadow: rgb(0 0 0 / 12%) 0px 1px 3px, rgb(0 0 0 / 24%) 0px 1px 2px;
-  background: rgb(251, 251, 251);
-  transition: all 0.1s ease 0s;
-}
-/* .detailsText {
-  font-size: 1.5em;
-  text-decoration: underline;
-  color: red;
-  display: block;
-  margin: 1em;
 
-  cursor: pointer;
-  outline: 0;
-  display: inline-block;
-  font-weight: 400;
-  line-height: 1.5;
-  text-align: center;
-  background-color: transparent;
-  border: 1px solid transparent;
-  padding: 6px 12px;
-  font-size: 1rem;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  color: #0d6efd;
-  border-color: #0d6efd;
-}
-.detailsText:hover {
-  color: #fff;
-  background-color: #0d6efd;
-  border-color: #0d6efd;
-} */
 /* .blob {
   width: 1000px;
   height: 1000px;
@@ -237,3 +221,47 @@ input {
   background-repeat: no-repeat;
   background-image: url("data:image/svg+xml;utf8, %3Csvg width='100%25' height='100%25' viewBox='0 0 1000 1000' xmlns='http://www.w3.org/2000/svg' %3E %3Cdefs%3E %3Cfilter id='grain' x='-50vw' y='-50vh' width='100vw' height='100vh'%3E %3CfeFlood flood-color='%23ffffff' result='neutral-gray' /%3E %3CfeTurbulence in='neutral-gray' type='fractalNoise' baseFrequency='2.5' numOctaves='100' stitchTiles='stitch' result='noise' /%3E %3CfeColorMatrix in='noise' type='saturate' values='0' result='destaturatedNoise' %3E%3C/feColorMatrix%3E %3CfeComponentTransfer in='desaturatedNoise' result='theNoise'%3E %3CfeFuncA type='table' tableValues='0 0 0.15 0'%3E%3C/feFuncA%3E %3C/feComponentTransfer%3E %3CfeBlend in='SourceGraphic' in2='theNoise' mode='soft-light' result='noisy-image' /%3E %3C/filter%3E %3CclipPath id='shape'%3E %3Cpath fill='currentColor' d='M815.5,653Q806,806,653,898Q500,990,334.5,910.5Q169,831,130.5,665.5Q92,500,174,378Q256,256,378,136.5Q500,17,660.5,98Q821,179,823,339.5Q825,500,815.5,653Z'%3E%3C/path%3E %3C/clipPath%3E %3C/defs%3E %3Cg filter='url(%23grain)' clip-path='url(%23shape)'%3E %3Cpath fill='%23444cf7' d='M815.5,653Q806,806,653,898Q500,990,334.5,910.5Q169,831,130.5,665.5Q92,500,174,378Q256,256,378,136.5Q500,17,660.5,98Q821,179,823,339.5Q825,500,815.5,653Z' /%3E %3C/g%3E %3C/svg%3E");
 } */
+
+/* image layout */
+.gallery {
+  margin: auto;
+  width: 80vw;
+  height: 1000px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px 20px;
+}
+.gallery-item {
+  min-height: 100%;
+  width: 100%;
+  object-fit: contain;
+  overflow: hidden;
+  position: relative;
+}
+.gallery-item-wrapper {
+  transform: scale(1);
+  transition: transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
+}
+
+.gallery-item-wrapper:hover {
+  transform: scale(1.1);
+}
+
+.gallery-item-image {
+  background-position: center center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  transform-origin: center;
+  object-fit: contain;
+  height: 300px;
+  width: 100%;
+  will-change: transform;
+  transform: scale(1.1);
+  position: absolute;
+}
+.sepia {
+  filter: grayscale(100%) sepia(20%) brightness(88%);
+}
+.masked {
+  clip-path: circle(25% at 50% 50%);
+}
