--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ input:focus {
   list-style: none;
   padding: 0;
   margin: 0;
-  background: rgba(0, 0, 0, 0.11);
+  background: rgba(29, 29, 29, 0.6);
   border-radius: 30px 0 0 30px;
 }
 .mobile-nav-toggle {
@@ -134,8 +134,8 @@ input:focus {
   button,
   .primary-navigation,
   .detailsText {
-    background: rgb(0, 0, 0) / 0.6;
-    backdrop-filter: blur(1rem);
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(20px);
   }
 }
 
@@ -172,6 +172,13 @@ input:focus {
   }
   .mobile-nav-toggle[aria-expanded="true"] {
     background-image: url("assets/hamburgerclose.svg");
+  }
+
+  /* profile */
+  #profile input {
+    display: block;
+
+    width: 90vw;
   }
 }
 
@@ -278,12 +285,36 @@ li {
   background-clip: padding-box;
 }
 
-/* Style your items */
 .my-masonry-grid_column > img {
-  /* change div to reference your elements you put in <Masonry> */
   background: grey;
   width: 100%;
   max-width: 500px;
   height: auto;
   margin-bottom: 30px;
+}
+
+/* PROFILE */
+#profile {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  gap: 40px;
+}
+
+#avatar {
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: cover;
+  background-position: top center;
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+}
+.update-details {
+  display: flex;
+  flex-direction: column;
 }
