--- a/src/index.css
+++ b/src/index.css
@@ -60,12 +60,14 @@ button {
 .scroll-to-top-button {  position: fixed;
   bottom: 2rem;
   right: 2rem;
+
 }
 .scroll-to-top-button_visible {
-  opacity: 1;
+opacity:1
 }
 .scroll-to-top-button_hidden {
   opacity: 0;
+ 
 }
 .detailsText {
   font-size: 1.5em;
