--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,27 @@
   margin: 0;
   padding: 0;
 }
-
+/* SCROLLBAR */
+html::-webkit-scrollbar {
+  width: 0.7vw;
+}
+html::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #fff;
+  border: 1px solid #aaa;
+}
+html::-webkit-scrollbar-track {
+  margin-top: -5px;
+  border-radius: 10px;
+  background: none;
+  border: 1px solid #ccc;
+}
+html::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.666);
+}
+html::-webkit-scrollbar-thumb:active {
+  background: rgb(0, 0, 0)
+}
 body {
   /* background: url(./assets/bg.svg) no-repeat center center fixed; */
 
@@ -57,17 +77,16 @@ button {
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-.scroll-to-top-button {  position: fixed;
+.scroll-to-top-button {
+  position: fixed;
   bottom: 2rem;
   right: 2rem;
-
 }
 .scroll-to-top-button_visible {
-opacity:1
+  opacity: 1;
 }
 .scroll-to-top-button_hidden {
   opacity: 0;
- 
 }
 .detailsText {
   font-size: 1.5em;
@@ -178,7 +197,6 @@ input:disabled::selection {
 }
 .primary-navigation span {
   font-weight: 700;
-  margin-right: 0.5em;
 }
 .primary-navigation > * {
   cursor: pointer;
@@ -284,43 +302,6 @@ li {
   background-image: url("data:image/svg+xml;utf8, %3Csvg width='100%25' height='100%25' viewBox='0 0 1000 1000' xmlns='http://www.w3.org/2000/svg' %3E %3Cdefs%3E %3Cfilter id='grain' x='-50vw' y='-50vh' width='100vw' height='100vh'%3E %3CfeFlood flood-color='%23ffffff' result='neutral-gray' /%3E %3CfeTurbulence in='neutral-gray' type='fractalNoise' baseFrequency='2.5' numOctaves='100' stitchTiles='stitch' result='noise' /%3E %3CfeColorMatrix in='noise' type='saturate' values='0' result='destaturatedNoise' %3E%3C/feColorMatrix%3E %3CfeComponentTransfer in='desaturatedNoise' result='theNoise'%3E %3CfeFuncA type='table' tableValues='0 0 0.15 0'%3E%3C/feFuncA%3E %3C/feComponentTransfer%3E %3CfeBlend in='SourceGraphic' in2='theNoise' mode='soft-light' result='noisy-image' /%3E %3C/filter%3E %3CclipPath id='shape'%3E %3Cpath fill='currentColor' d='M815.5,653Q806,806,653,898Q500,990,334.5,910.5Q169,831,130.5,665.5Q92,500,174,378Q256,256,378,136.5Q500,17,660.5,98Q821,179,823,339.5Q825,500,815.5,653Z'%3E%3C/path%3E %3C/clipPath%3E %3C/defs%3E %3Cg filter='url(%23grain)' clip-path='url(%23shape)'%3E %3Cpath fill='%23444cf7' d='M815.5,653Q806,806,653,898Q500,990,334.5,910.5Q169,831,130.5,665.5Q92,500,174,378Q256,256,378,136.5Q500,17,660.5,98Q821,179,823,339.5Q825,500,815.5,653Z' /%3E %3C/g%3E %3C/svg%3E");
 } */
 
-/* image layout */
-/* .gallery {
-  margin: auto;
-  width: 80vw;
-  height: 1000px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px 20px;
-}
-.gallery-item {
-  min-height: 100%;
-  width: 100%;
-  object-fit: contain;
-  overflow: hidden;
-  position: relative;
-}
-.gallery-item-wrapper {
-  transform: scale(1);
-  transition: transform 0.5s cubic-bezier(0.77, 0, 0.175, 1);
-}
-
-.gallery-item-wrapper:hover {
-  transform: scale(1.1);
-}
-
-.gallery-item-image {
-  background-position: center center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  transform-origin: center;
-  object-fit: contain;
-  height: 300px;
-  width: 100%;
-  will-change: transform;
-  transform: scale(1.1);
-  position: absolute;
-} */
 /* .sepia {
   filter: grayscale(100%) sepia(20%) brightness(88%);
 }
