+useparams filtering by tag, tag marquee, animations

--- a/src/index.css
+++ b/src/index.css
@@ -45,28 +45,6 @@ input[type="file"],
 input[type="file"]::file-selector-button {
   cursor: none;
 }
-/* SCROLLBAR */
-html::-webkit-scrollbar {
-  width: 0.7vw;
-}
-html::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background: #fff;
-  border: 1px solid #aaa;
-}
-html::-webkit-scrollbar-track {
-  margin-top: -5px;
-  border-radius: 10px;
-  background: none;
-  border: 1px solid #ccc;
-}
-html::-webkit-scrollbar-thumb:hover {
-  background: rgba(0, 0, 0, 0.666);
-}
-html::-webkit-scrollbar-thumb:active {
-  background: rgb(0, 0, 0);
-}
-
 body {
   /* background: url(./assets/bg.svg) no-repeat center center fixed; */
   height: 100vh;
@@ -74,11 +52,10 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  font-family: "GlyphWorld Desert", sans-serif;
+  font-family: sans-serif;
   font-size: 1.2rem;
-  letter-spacing: 3px;
-  color: rgba(255, 255, 255, 0.568);
-  background-color: black;
+  color: rgb(0, 0, 0);
+  background-color: rgb(238, 229, 229);
   /* background: linear-gradient(
         to top,
         rgba(245, 167, 0, 0.801),
@@ -86,14 +63,40 @@ body {
       )
       no-repeat center center fixed,
     url(https://grainy-gradients.vercel.app/noise.svg); */
-  background: linear-gradient(
+  /* background: linear-gradient(
         to top,
-        rgba(0, 134, 167, 0.905),
-        rgba(88, 0, 189, 0.419)
+        rgba(0, 184, 15, 0.905),
+        rgba(5, 85, 138, 0.905),
+        rgba(101, 0, 160, 0.664),
+        rgba(228, 194, 56, 0.905)
       )
       no-repeat center center fixed,
-    url("../src/assets/noise.svg");
+    url("../src/assets/noise.svg"); */
 }
+/* SCROLLBAR */
+body::-webkit-scrollbar {
+  width: 0.7vw;
+}
+body::-webkit-scrollbar:hover {
+}
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: rgb(0, 0, 0);
+  border: 1px solid #aaa;
+}
+body::-webkit-scrollbar-track {
+  margin-top: -5px;
+  border-radius: 10px;
+  background: none;
+  border: 1px solid #ccc;
+}
+body::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.666);
+}
+body::-webkit-scrollbar-thumb:active {
+  background: rgb(0, 0, 0);
+}
+
 span {
   white-space: nowrap;
 }
@@ -228,8 +231,8 @@ input:disabled::selection {
   list-style: none;
   padding: 0;
   margin: 0;
-  background: rgba(29, 29, 29, 0.6);
-  border-radius: 30px 0 0 30px;
+  background: rgb(0, 0, 0);
+  border-radius: 10px 0 0 10px;
 }
 .mobile-nav-toggle {
   display: none;
@@ -245,7 +248,7 @@ input:disabled::selection {
   button,
   .primary-navigation,
   .detailsText {
-    background: rgba(255, 255, 255, 0.2);
+    background: rgba(0, 0, 0, 0.884);
     backdrop-filter: blur(20px);
   }
 }
@@ -288,7 +291,6 @@ input:disabled::selection {
   /* profile */
   #profile input {
     display: block;
-
     width: 90vw;
   }
 }
@@ -321,7 +323,7 @@ input:disabled::selection {
     order: 2;
   }
   .primary-navigation {
-    margin-block: 3rem;
+    margin-block: 0;
   }
 }
 
@@ -418,11 +420,40 @@ li {
   opacity: 0;
 }
 
-.openModalBtn {
-  width: 200px;
-  height: 40px;
-  border: none;
-  border-radius: 5px;
-  background-color: cornflowerblue;
-  color: white;
+/* modal */
+.modalBackground {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.555);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  color: black;
+  justify-content: center;
+  align-items: center;
+}
+.modalContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+  height: 80%;
+  border-radius: 15px;
+  background-color: rgba(255, 255, 255, 0.892);
+  box-shadow: rgba(0, 0, 0, 0.55) 0px 5px 15px;
+  display: flex;
+  padding: 0 25px;
+}
+.modalBody {
+  margin: auto;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: space-between;
+}
+.modalContainer img {
+  margin: auto;
+  object-fit: contain;
+  max-width: 50%;
 }
