--- a/src/index.css
+++ b/src/index.css
@@ -436,7 +436,8 @@ li {
 .modalContainer {
   display: flex;
   justify-content: space-between;
-  width: 70%;
+  /* width: 70%; */
+  max-width: 90%;
   height: 80%;
   border-radius: 15px;
   background-color: rgba(255, 255, 255, 0.892);
